--- a/02.kafka/producer/src/main/resources/application.yml
+++ b/02.kafka/producer/src/main/resources/application.yml
@@ -4,9 +4,25 @@ server:
     context-path: /
 
 
+#spring:
+#  kafka:
+#    bootstrap-servers: localhost:9092
+#    producer:
+#      # 每次批量发送消息的数量
+#      batch-size: 16
+#      # 缓存容量
+#      buffer-memory: 33554432
+#      #设置大于0的值，则客户端会将发送失败的记录重新发送
+#      retries: 0
+#      # 指定消息key和消息体的编解码方式 UTF-8
+#      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+#      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+
+
+#服务器
 spring:
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: 192.168.188.106:9092
     producer:
       # 每次批量发送消息的数量
       batch-size: 16
@@ -17,6 +33,8 @@ spring:
       # 指定消息key和消息体的编解码方式 UTF-8
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    listener:
+      concurrency: 10
 
 kafka:
   #订阅的主题
